--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "node-persist": "^4.0.1"
+    "mysql": "^2.18.1"
   }
 }
